--- a/Clone Project 1 Styles.css
+++ b/Clone Project 1 Styles.css
@@ -39,7 +39,7 @@ body {
   justify-content: center;
   text-align: center;
   align-items: center;
-  background: url(https://img.baba-blog.com/2024/01/a-selection-of-clear-glass-perfume-bottles.jpeg?x-oss-process=style/full)
+  background: url(https://www.jarsking.com/wp-content/uploads/2023/05/Perfume-Bottles-Manufacturer-768x576.jpg)
     no-repeat center center/cover;
 }
 
@@ -135,11 +135,13 @@ h5 {
 .perfume-subsection h3 {
   font-size: 25;
   color: blueviolet;
+  text-align: center;
 }
 
 .perfume-subsection p {
   font-size: 15;
   color: blueviolet;
+  text-align: center;
 }
 .perfume-subsection img {
   width: 300px;
@@ -154,10 +156,9 @@ h5 {
 }
 
 .team-grid img {
-  display: inline-block;
-  width: 450px;
-  height: 500px;
-  border: 2px solid #000;
+  display: inline;
+  width: 100%;
+  height: 100%;
   align-items: center;
   flex: 1;
 }
@@ -166,4 +167,32 @@ h5 {
   text-decoration: none;
   color: #885df1;
   text-align: center;
+}
+/* for screen less than 800px */
+@media all and (max-width: 800px) {
+  .wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
+  .mobile {
+    display: block;
+  }
+  .desktop {
+    display: none;
+  }
+}
+
+/* for screen less than 460px */
+@media all and (max-width: 460px) {
+  .wrapper {
+    grid-template-columns: 1fr;
+  }
+  .mobile {
+    display: block;
+  }
+  h1.mobile {
+    display: none;
+  }
+  .desktop {
+    display: none;
+  }
 }
